# A2_DIALECTICAbyTACITUS

./: .env.cloudrun.example  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  cloudbuild.yaml  databricks.yml  docker-compose.local.yml  docker-compose.yml  ontology.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.hypothesis/constants/: 034394389d72ed04  0a1e66b9c61e5be0  389720df7329aba9  3a8dea66cfe867f7  3c5a8acfe6833a44  45e61af8baf673e2  4d3f747aaa9f7616  5476fd67afefa82e  58aab9ffc92c4384  58e8ad358bb068e7  5a36915b24754aea  5ab948a9c24420c1  6020eb64884c167a  6312105f0638fc29  6d3a80f2fb5b846b  6f9661d16edf0cba  71d20acafdca5ff6  79e5f07bbf9e8a07  7f13e9480d4c5833  85fee28eec4fa1ba  88f124cc9a38406a  8a6dbc4d9162cc87  8bd55714d61ad140  8f0bb9b3b2830076  921fa8ac865596e8  9887ed8219b15bbb  b0ef2f884e85e3ef  b2f662c247e4cc61  ba45f97767a03917  d10ad8d8feab916e  d7d30d96302682ae  dd74944571747ed9  e4f79739bb36a02c  e6a1d2e10908a378
app/: __init__.py
app/graph_reasoning/: __init__.py  cozo_client.py  graphiti_client.py  ingestion_adapter.py  neo4j_client.py  pipeline.py  reasoning_queries.py  schema.py  sql_store.py  sync_service.py
apps/web/: .gcloudignore  Dockerfile  jest.config.js  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts
data/raw/: romeo_juliet_sample.txt
data/sample_docs/: mediation_commitments.txt  syria_2011_2024_briefing.txt
data/seed/: frameworks.json  glossary.json  plover_mapping.json  reasoning_library.json  symbolic_rules.json
data/templates/: commercial_dispute.yaml  human_friction.yaml  warfare_political.yaml
databricks/: databricks.yml
databricks/resources/: jobs.yml
databricks/src/: common.py  evaluate_extractions.py  extract_to_delta.py  ingest_documents.py  sync_to_neo4j.py
dialectica/: __init__.py  cli.py
dialectica/graph/: __init__.py  base.py  memory_adapter.py  neo4j_adapter.py
dialectica/ingestion/: __init__.py  chunk_documents.py  extract_primitives.py  load_documents.py  map_to_ontology.py  pipeline.py  write_graph.py
dialectica/ontology/: __init__.py  models.py  schema.py
docs/: ARCHITECTURE.md  CLOUD_RUN_DEPLOYMENT.md  DIALECTICA_AUTONOMOUS_IMPROVEMENT_PLAN.md  DIALECTICA_GRAPH_PIPELINE_PLAN.md  DIALECTICA_MONSTER_TODO.md  DIALECTICA_NEUROSYMBOLIC_GRAPHRAG_RESEARCH.md  EVALUATION.md  GCP_COST_CLEANUP.md  GRAPH_REASONING_PLAN.md  INGESTION_PIPELINE.md  MAY_DEMO_RESEARCH_EXECUTION_PLAN.md  ONTOLOGY_NOTES.md  VC_DEMO_SCRIPT.md  api-reference.md  architecture.md  benchmarking.md  deployment.md  developer-guide.md  local-development.md  mcp-setup.md  migration-guide.md  neurosymbolic-rationale.md  ontology.md  runbook.md  sdk-quickstart.md  theory-frameworks.md  tiers.md
docs/adr/: 001-dual-database-strategy.md  002-symbolic-firewall.md  003-pubsub-over-pulsar.md  004-plover-over-cameo.md  005-uv-over-poetry.md  006-qdrant-over-vertex-vector.md  007-instructor-over-raw-llm.md
docs/databricks/: beginner-cli-quickstart.md  open-source-test-corpus.md  operationalization-runbook.md  terminal-ingestion-workflow.md  where-to-see-pipelines.md
docs/graphops/: benchmarking-engine.md  book-ingestion-dynamic-ontology.md  ceo-cto-workflows.md  dynamic-ontology-operating-model.md  embedding-graphops-in-tacitus-products.md  graphops-product-operating-model.md  neurosymbolic-rule-layer.md  pipeline-configuration-studio.md  runtime-secrets-and-operations.md  tacitus-graph-architecture.md  user-usability-targets.md  workbench-backbone-next-target.md
docs/legacy/: ontology_v1_reference.py
docs/prompts/: MAY_PROMPTS_PROCESS.md  MAY_PROMPT_01_INGESTION_THEATRE.md  MAY_PROMPT_02_REASONING_THEATRE.md
infrastructure/: cloudbuild.dialectica-runtime.yaml  cloudbuild.dialectica-web.yaml  cloudbuild.yaml
infrastructure/cloudrun/: api-service.yaml  extraction-worker.yaml  mcp-server.yaml
infrastructure/databricks/: check_usage.ps1  (+3 more)
ontology/: tacitus_core_v1.yaml
scripts/: demo_query.py  seed_demo.py  seed_expanded.py
tests/: test_graph_separation.py  test_ontology_models.py  test_provenance_required.py  test_temporal_actor_state.py
tools/: apply_neo4j_schema.py  download_gutenberg.py  ingest_text_to_neo4j.py  neo4j_aura_api.py  neo4j_cypher.py
(+277 files in other folders)
