[project]
name = "dialectica"
version = "2.0.0"
description = "DIALECTICA by TACITUS — The Universal Data Layer for Human Friction"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "TACITUS", email = "team@tacitus.ai" }]
dependencies = [
    "neo4j>=6.1.0",
    "pydantic>=2.9,<3",
    "pyyaml>=6.0",
]

[project.scripts]
dialectica = "dialectica.cli:main"

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/sdk-typescript"]

[tool.uv.sources]
dialectica-ontology = { workspace = true }
dialectica-graph = { workspace = true }
dialectica-extraction = { workspace = true }
dialectica-reasoning = { workspace = true }
dialectica-api = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "hypothesis>=6.112",
    "testcontainers>=4.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["dialectica_ontology", "dialectica_graph", "dialectica_extraction", "dialectica_reasoning", "dialectica_api"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ANN001", "ANN003", "ANN201", "ANN202", "ANN204"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=packages --cov-report=term-missing --cov-report=xml"
